<resources>
    <string name="app_name">PlaylistMaker</string>
    <string name="main_screen_title">Playlist maker</string>
    <string name="search">Поиск</string>
    <string name="library">Медиатека</string>
    <string name="settings">Настройки</string>
    <string name="dark_theme">Темная тема</string>
    <string name="share">Поделиться приложением</string>
    <string name="support">Написать в поддержку</string>
    <string name="user_agreement">Пользовательское соглашение</string>
    <string name="clear_button_description">Очистить поле</string>
    <string name="share_link">https://practicum.yandex.ru/android-developer</string>
    <string name="support_email_address">almkk@rambler.ru</string>
    <string name="support_email_subject">Сообщение разработчикам и разработчицам
        приложения Playlist Maker</string>
    <string name="support_email_body">Спасибо разработчикам и разработчицам
        за крутое приложение!</string>
    <string name="offer_link">https://yandex.ru/legal/practicum_offer</string>
    <string name="forward_arrow_description">Forward arrow</string>
    <string name="song_cover_description">Song cover</string>
    <string name="dot_delimiter">•</string>
    <string name="nothing_found">Ничего не нашлось</string>
    <string name="no_connection">
        Проблемы со связью\n\nЗагрузка не удалась. Проверьте подключение к интернету
    </string>
    <string name="update">Обновить</string>
    <string name="clear_history">Очистить историю</string>
    <string name="search_history_title">Вы искали</string>
    <string name="track_time_title">Длительность</string>
    <string name="track_collection_name_title">Альбом</string>
    <string name="track_year_title">Год</string>
    <string name="track_genre_title">Жанр</string>
    <string name="track_country_title">Страна</string>
    <string name="button_add_to_playlist_description">Add to playlist button</string>
    <string name="button_play_description">Play and pause button</string>
    <string name="button_like_description">Like button</string>
    <string name="playback_progress_initial_value">0:00</string>
    <string name="track_not_found_message">Track not found</string>
    <string name="media_library_is_empty">Ваша медиатека пуста</string>
    <string name="new_playlist">Новый плейлист</string>
    <string name="no_playlists">Вы не создали\nни одного плейлиста</string>
    <string name="favourite_tracks_title">Избранные треки</string>
    <string name="playlists_title">Плейлисты</string>
    <string name="new_playlist_title">Новый плейлист</string>
    <string name="edit_playlist_title">Редактировать плейлист</string>
    <string name="new_playlist_dialog_title">Завершить создание плейлиста?</string>
    <string name="new_playlist_dialog_message">Все несохраненные данные будут потеряны</string>
    <string name="new_playlist_dialog_positive">Завершить</string>
    <string name="new_playlist_dialog_negative">Отмена</string>
    <string name="bottom_sheet_title">Добавить в плейлист</string>
    <string name="playlist_is_empty">Плейлист пустой</string>
    <string name="share_playlist">Поделиться</string>
    <string name="edit_playlist">Редактировать информацию</string>
    <string name="delete_playlist">Удалить плейлист</string>
    <string name="delete_track_from_playlist_dialog_title">Удалить трек</string>
    <string name="delete_track_from_playlist_dialog_message">Хотите удалить трек?</string>
    <string name="delete_track_from_playlist_dialog_positive">Да</string>
    <string name="delete_track_from_playlist_dialog_negative">Нет</string>
    <string name="delete_playlist_dialog_title">Удалить плейлист</string>
    <string name="delete_playlist_dialog_message">Хотите удалить плейлист?</string>
    <string name="delete_playlist_dialog_positive">Да</string>
    <string name="delete_playlist_dialog_negative">Нет</string>
    <string name="button_create_text">Создать</string>
    <string name="button_save_text">Сохранить</string>
    <string name="nothing_to_share_message">
        В этом плейлисте нет списка треков, которым можно поделиться
    </string>
</resources>