<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/main"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    tools:context=".SettingsActivity">

    <androidx.appcompat.widget.Toolbar
        android:id="@+id/toolbar"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="4dp"
        app:navigationIcon="@drawable/ic_arrow_back"
        app:title="@string/settings" />

    <androidx.appcompat.widget.SwitchCompat
        android:id="@+id/switch_theme"
        android:layout_width="match_parent"
        android:layout_height="@dimen/settings_screen_item_height"
        android:layout_marginStart="@dimen/default_margin"
        android:layout_marginEnd="6dp"
        android:text="@string/dark_theme"
        android:textColor="@color/yp_black"
        android:textSize="@dimen/medium_text_size" />

    <com.google.android.material.textview.MaterialTextView
        android:id="@+id/tv_share"
        style="@style/settings_screen_text_view_style"
        android:text="@string/share"
        app:drawableEndCompat="@drawable/ic_share" />

    <com.google.android.material.textview.MaterialTextView
        android:id="@+id/tv_support"
        style="@style/settings_screen_text_view_style"
        android:text="@string/support"
        app:drawableEndCompat="@drawable/ic_support" />

    <com.google.android.material.textview.MaterialTextView
        android:id="@+id/tv_user_agreement"
        style="@style/settings_screen_text_view_style"
        android:text="@string/user_agreement"
        app:drawableEndCompat="@drawable/ic_arrow_forward" />

</LinearLayout>