<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/main"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/yp_blue"
    android:orientation="vertical"
    tools:context=".MainActivity">

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginStart="@dimen/default_margin"
        android:layout_marginTop="14dp"
        android:gravity="center_vertical"
        android:text="@string/app_name"
        android:textColor="@color/white"
        android:textSize="@dimen/large_text_size" />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical"
        android:paddingStart="@dimen/default_margin"
        android:paddingTop="24dp"
        android:paddingEnd="@dimen/default_margin"
        android:paddingBottom="28dp">

        <com.google.android.material.button.MaterialButton
            android:id="@+id/button_search"
            style="@style/main_screen_button_style"
            android:text="@string/search"
            app:icon="@drawable/ic_search" />

        <com.google.android.material.button.MaterialButton
            android:id="@+id/button_library"
            style="@style/main_screen_button_style"
            android:text="@string/library"
            app:icon="@drawable/ic_library" />

        <com.google.android.material.button.MaterialButton
            android:id="@+id/button_settings"
            style="@style/main_screen_button_style"
            android:text="@string/settings"
            app:icon="@drawable/ic_settings" />

    </LinearLayout>
</LinearLayout>