<?xml version="1.0" encoding="utf-8"?>
<androidx.coordinatorlayout.widget.CoordinatorLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/main"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".player.ui.PlayerFragment">

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        tools:context=".player.ui.PlayerFragment">

        <com.google.android.material.appbar.MaterialToolbar
            android:id="@+id/toolbar"
            style="@style/ToolbarWithNavigationStyle"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/toolbar_margin_top"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <androidx.constraintlayout.widget.Guideline
            android:id="@+id/base_track_description_start_border"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            app:layout_constraintGuide_begin="@dimen/player_activity_base_track_desctiption_screen_edge_margin" />

        <androidx.constraintlayout.widget.Guideline
            android:id="@+id/base_track_description_end_border"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            app:layout_constraintGuide_end="@dimen/player_activity_base_track_desctiption_screen_edge_margin" />

    <ImageView
        android:id="@+id/iv_cover"
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:layout_marginVertical="@dimen/player_activity_track_cover_vertical_margin"
        android:contentDescription="@string/song_cover_description"
        app:layout_constraintBottom_toTopOf="@id/tv_track_name"
        app:layout_constraintDimensionRatio="h,1:1"
        app:layout_constraintEnd_toStartOf="@id/base_track_description_end_border"
        app:layout_constraintStart_toEndOf="@id/base_track_description_start_border"
        app:layout_constraintTop_toBottomOf="@id/toolbar" />

    <TextView
        android:id="@+id/tv_track_name"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginBottom="@dimen/player_activity_track_name_bottom_margin"
        android:textAppearance="@style/FontYSDisplayMediumSize22Weight400"
        android:textColor="?attr/colorSecondary"
        app:layout_constraintBottom_toTopOf="@id/tv_artist_name"
        app:layout_constraintEnd_toStartOf="@id/base_track_description_end_border"
        app:layout_constraintStart_toEndOf="@id/base_track_description_start_border"
        app:layout_constraintTop_toBottomOf="@id/iv_cover"
        tools:text="Yesterday (Remastered 2009)" />

    <TextView
        android:id="@+id/tv_artist_name"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginBottom="@dimen/player_activity_artist_name_bottom_margin"
        android:textAppearance="@style/FontYSDisplayMediumSize14Weight400"
        android:textColor="?attr/colorSecondary"
        app:layout_constraintBottom_toTopOf="@id/button_play"
        app:layout_constraintEnd_toStartOf="@id/base_track_description_end_border"
        app:layout_constraintStart_toEndOf="@id/base_track_description_start_border"
        app:layout_constraintTop_toBottomOf="@id/tv_track_name"
        tools:text="The Beatles" />

    <ImageButton
        android:id="@+id/button_play"
        android:layout_width="@dimen/player_activity_play_button_size"
        android:layout_height="@dimen/player_activity_play_button_size"
        android:layout_marginBottom="12dp"
        android:background="@drawable/ic_button_play"
        android:contentDescription="@string/button_play_description"
        app:layout_constraintBottom_toTopOf="@id/tv_playback_progress"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/tv_artist_name" />

        <com.google.android.material.textview.MaterialTextView
            android:id="@+id/tv_playback_progress"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginBottom="@dimen/player_activity_playback_progress_bottom_margin"
            android:text="@string/playback_progress_initial_value"
            android:textAlignment="center"
            android:textAppearance="@style/FontYSDisplayMediumSize14Weight500"
            android:textColor="?attr/colorSecondary"
            app:layout_constraintBottom_toTopOf="@id/tv_track_time_title"
            app:layout_constraintEnd_toEndOf="@id/button_play"
            app:layout_constraintStart_toStartOf="@id/button_play"
            app:layout_constraintTop_toBottomOf="@id/button_play" />

        <ImageButton
            android:id="@+id/button_add"
            android:layout_width="@dimen/player_activity_side_button_size"
            android:layout_height="@dimen/player_activity_side_button_size"
            android:background="@drawable/ic_button_add_to_playlist"
            android:contentDescription="@string/button_add_to_playlist_description"
            app:layout_constraintBottom_toBottomOf="@id/button_play"
            app:layout_constraintStart_toEndOf="@id/base_track_description_start_border"
            app:layout_constraintTop_toTopOf="@id/button_play" />

        <ImageButton
            android:id="@+id/button_like"
            android:layout_width="@dimen/player_activity_side_button_size"
            android:layout_height="@dimen/player_activity_side_button_size"
            android:background="@drawable/ic_button_like"
            android:contentDescription="@string/button_like_description"
            app:layout_constraintBottom_toBottomOf="@id/button_play"
            app:layout_constraintEnd_toStartOf="@id/base_track_description_end_border"
            app:layout_constraintTop_toTopOf="@id/button_play" />

        <androidx.constraintlayout.widget.Barrier
            android:id="@+id/barrier"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            app:barrierDirection="end"
            app:constraint_referenced_tags="trackTimeTag, collectionNameTitleTag, yearTag, genreTag, countryTag" />

        <androidx.constraintlayout.widget.Guideline
            android:id="@+id/additional_track_description_start_border"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            app:layout_constraintGuide_begin="@dimen/player_activity_additional_track_desctiption_screen_edge_margin" />

        <androidx.constraintlayout.widget.Guideline
            android:id="@+id/additional_track_description_end_border"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            app:layout_constraintGuide_end="@dimen/player_activity_additional_track_desctiption_screen_edge_margin" />

        <com.google.android.material.textview.MaterialTextView
            android:id="@+id/tv_track_time_title"
            style="@style/PlayerActivityTrackDescriptionTitleTextViewStyle"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginEnd="@dimen/player_activity_track_time_title_end_margin"
            android:layout_marginBottom="@dimen/player_activity_track_description_bottom_margin"
            android:text="@string/track_time_title"
            app:layout_constraintBottom_toTopOf="@id/tv_collection_name_title"
            app:layout_constraintEnd_toStartOf="@id/barrier"
            app:layout_constraintStart_toEndOf="@id/additional_track_description_start_border"
            app:layout_constraintTag="trackTimeTag"
            app:layout_constraintTop_toBottomOf="@id/tv_playback_progress" />

        <com.google.android.material.textview.MaterialTextView
            android:id="@+id/tv_track_time"
            style="@style/PlayerActivityTrackDescriptionTextViewStyle"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            app:layout_constraintBottom_toBottomOf="@id/tv_track_time_title"
            app:layout_constraintEnd_toStartOf="@id/additional_track_description_end_border"
            app:layout_constraintStart_toEndOf="@id/barrier"
            app:layout_constraintTop_toTopOf="@id/tv_track_time_title"
            tools:text="5:35" />

        <androidx.constraintlayout.widget.Group
            android:id="@+id/group_collection_name"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            app:constraint_referenced_tags="collectionNameTitleTag, collectionNameTag" />

        <com.google.android.material.textview.MaterialTextView
            android:id="@+id/tv_collection_name_title"
            style="@style/PlayerActivityTrackDescriptionTitleTextViewStyle"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginBottom="@dimen/player_activity_track_description_bottom_margin"
            android:text="@string/track_collection_name_title"
            app:layout_constraintBottom_toTopOf="@id/tv_year_title"
            app:layout_constraintStart_toEndOf="@id/additional_track_description_start_border"
            app:layout_constraintTag="collectionNameTitleTag"
            app:layout_constraintTop_toBottomOf="@id/tv_track_time_title" />

        <com.google.android.material.textview.MaterialTextView
            android:id="@+id/tv_collection_name"
            style="@style/PlayerActivityTrackDescriptionTextViewStyle"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            app:layout_constraintBottom_toBottomOf="@id/tv_collection_name_title"
            app:layout_constraintEnd_toStartOf="@id/additional_track_description_end_border"
            app:layout_constraintStart_toEndOf="@id/barrier"
            app:layout_constraintTag="collectionNameTag"
            app:layout_constraintTop_toTopOf="@id/tv_collection_name_title"
            tools:text="Yesterday (Remastered 2009)" />

        <com.google.android.material.textview.MaterialTextView
            android:id="@+id/tv_year_title"
            style="@style/PlayerActivityTrackDescriptionTitleTextViewStyle"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginBottom="@dimen/player_activity_track_description_bottom_margin"
            android:text="@string/track_year_title"
            app:layout_constraintBottom_toTopOf="@id/tv_genre_title"
            app:layout_constraintStart_toEndOf="@id/additional_track_description_start_border"
            app:layout_constraintTag="yearTag"
            app:layout_constraintTop_toBottomOf="@id/tv_collection_name_title" />

        <com.google.android.material.textview.MaterialTextView
            android:id="@+id/tv_year"
            style="@style/PlayerActivityTrackDescriptionTextViewStyle"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            app:layout_constraintBottom_toBottomOf="@id/tv_year_title"
            app:layout_constraintEnd_toStartOf="@id/additional_track_description_end_border"
            app:layout_constraintStart_toEndOf="@id/barrier"
            app:layout_constraintTop_toTopOf="@id/tv_year_title"
            tools:text="1965" />

        <com.google.android.material.textview.MaterialTextView
            android:id="@+id/tv_genre_title"
            style="@style/PlayerActivityTrackDescriptionTitleTextViewStyle"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginBottom="@dimen/player_activity_track_description_bottom_margin"
            android:text="@string/track_genre_title"
            app:layout_constraintBottom_toTopOf="@id/tv_country_title"
            app:layout_constraintStart_toEndOf="@id/additional_track_description_start_border"
            app:layout_constraintTag="genreTag"
            app:layout_constraintTop_toBottomOf="@id/tv_year_title" />

        <com.google.android.material.textview.MaterialTextView
            android:id="@+id/tv_genre"
            style="@style/PlayerActivityTrackDescriptionTextViewStyle"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            app:layout_constraintBottom_toBottomOf="@id/tv_genre_title"
            app:layout_constraintEnd_toStartOf="@id/additional_track_description_end_border"
            app:layout_constraintStart_toEndOf="@id/barrier"
            app:layout_constraintTop_toTopOf="@id/tv_genre_title"
            tools:text="Rock" />

        <com.google.android.material.textview.MaterialTextView
            android:id="@+id/tv_country_title"
            style="@style/PlayerActivityTrackDescriptionTitleTextViewStyle"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginBottom="@dimen/player_activity_track_description_bottom_string_bottom_margin"
            android:text="@string/track_country_title"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintStart_toEndOf="@id/additional_track_description_start_border"
            app:layout_constraintTag="countryTag"
            app:layout_constraintTop_toBottomOf="@id/tv_genre_title" />

        <com.google.android.material.textview.MaterialTextView
            android:id="@+id/tv_country"
            style="@style/PlayerActivityTrackDescriptionTextViewStyle"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            app:layout_constraintBottom_toBottomOf="@id/tv_country_title"
            app:layout_constraintEnd_toStartOf="@id/additional_track_description_end_border"
            app:layout_constraintStart_toEndOf="@id/barrier"
            app:layout_constraintTop_toTopOf="@id/tv_country_title"
            tools:text="Великобритания" />

    </androidx.constraintlayout.widget.ConstraintLayout>

    <View android:id="@+id/overlay"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:background="#99000000"
        android:visibility="gone"/>

    <LinearLayout
        android:id="@+id/playlists_bottom_sheet"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:background="@drawable/bottom_sheet_shape"
        android:orientation="vertical"
        android:gravity="center_horizontal"
        app:behavior_hideable="true"
        app:behavior_peekHeight="0dp"
        app:layout_behavior="com.google.android.material.bottomsheet.BottomSheetBehavior">

        <View
            android:layout_width="@dimen/bottom_sheet_top_line_width"
            android:layout_height="@dimen/bottom_sheet_top_line_height"
            android:layout_marginTop="@dimen/bottom_sheet_top_line_margin_top"
            android:background="@color/yp_light_gray"/>

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/bottom_sheet_title_margin_top"
            android:text="@string/bottom_sheet_title"
            android:textAlignment="center"
            android:textAppearance="@style/FontYSDisplayMediumSize19Weight500"
            android:textColor="?attr/colorSecondary"
            />

        <com.google.android.material.button.MaterialButton
            android:id="@+id/button_new_playlist"
            style="@style/PlaylistsFragmentMaterialButtonStyle"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center_horizontal"
            android:layout_marginTop="@dimen/playlists_fragment_new_playlist_button_margin_top"
            android:layout_marginBottom="8dp"
            android:text="@string/new_playlist" />

        <androidx.recyclerview.widget.RecyclerView
            android:id="@+id/rv_playlist"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            app:layoutManager="androidx.recyclerview.widget.LinearLayoutManager"
            android:layout_marginTop="@dimen/bottom_sheet_rv_margin_top"
            tools:listitem="@layout/view_playlist_item_rv"/>

    </LinearLayout>
    
</androidx.coordinatorlayout.widget.CoordinatorLayout>